# SolArduino

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  index.html  index.php  params.json  pirsnreo.ava.txt  sunTimesTest.html  suncalctest.html  totranslate.js
Arduino/: platformio.ini
Arduino/SolArduino/: setup.ino  solarPanelControl.ino
Arduino_IDE/SolArduino/: SolArduino.ino  numbers.c  numbers.h  testParseTest.ino
Arduino_IDE/exampleWebClient/: exampleWebClient.ino
Arduino_IDE/exampleWebClientDHCP/: exampleWebClientDHCP.ino
Arduino_IDE/importTable/: importTable.ino  numbers.c
Arduino_IDE/ntpTest/: ntpTest.ino
Arduino_IDE/requestParseAngles/: communicatin.ino
Arduino_IDE/testParseTest/: testParseTest.ino
Arduino_IDE/testStormParsing/: testStormParsing.ino
Calculations/Mathematica/: demonstration.nb  export.csv  realdata.nb  tests.nb
Desktop-app/: README.md
Documentation/: .gitattributes  .gitignore  Documentation.tex  Documentation.toc  JsetTest.nb  findOptimalPanelAngle.nb  findOptimalPanelAnglePowerLoss.nb  movingOverDay.nb  percentDifferenceByAngle.nb  powerfromthesun.nb  realdata.nb
Documentation/Mathematica/: AbbyTest.nb  JsetTest.nb  SolArduino.m  ThomasTest.nb  angles.csv  data17_23.csv  degs.nb  demonstration.nb  export.csv  movingOverDay.nb  percentDifferenceByAngle.nb  powerfromthesun.nb  realPower.nb  realdata.nb  suncalc.nb  times.csv  vanJou.nb
Documentation/src/: ArduinoCode.tex  Documentation.tex  Setup.tex  android.tex  arduino.tex  arduinocode.tex  calculations.tex  documentation.tex  maintenance.tex  setup.tex
Raspberry-Pi/: .gitignore  angles.times  readme.md  requirements.txt  restart.sh  solarduino_meta.conf  supervisord.conf
Raspberry-Pi/src/: auto_mode.py  auto_mode_thread.py  emergency.py  get_optimal_angles.py  panel_controller.py  panel_mover.py  solar_panel.py  solarduino.py  stoppable_thread.py  stoppable_timer.py  webserver.py
Raspberry-Pi/unit_tests/: test_daemon_webserver.py  test_find_ip.py  test_potmeter.py  test_potmeter_gpiozero.py  test_server.py  test_timer.py  test_webserver_controller.py
SolAppduino/: README.md  down.psd  up.psd
SolAppduino/SolArduino/: .gitignore  build.gradle  local.properties  readme.md  settings.gradle
SolArduino/: .clang_complete  .gcc-flags.json
SolArduino-Pi/: .flake8  requirements.txt  test.py  test_daemon.py  test_panel_control.py  test_server.py
SolArduino-Pi/src/: panel_controller.py  solarduino.py  webserver.py
SolArduino-Pi/unit_tests/: test_panel_control.py
SolArduino-core/haskell/: .gitignore  SolArduino-haskell.cabal  cabal.config  haskell-template-project.cabal  readme.rst  solarduino-haskell.cabal
SolArduino-core/haskell/app/: Main.hs
SolArduino-core/haskell/solarduino-haskell/: LICENSE  README.md  angles.times  solarduino-haskell.cabal  stack.yaml
SolArduino-core/haskell/solarduino-haskell/app/: Main.hs
SolArduino-core/haskell/solarduino-haskell/src/: AngleFunctions.hs  PowerFunctions.hs  SummerTime.hs  SunPosition.hs  TimeConverters.hs  Util.hs
SolArduino-core/haskell/solarduino-haskell/test/: CoreTest.hs
SolArduino-core/haskell/src/: PowerFunctions.hs
SolArduino-core/haskell/src/Data/String/: Strip.hs
SolArduino-core/haskell/test/: StripTest.hs
SolArduino-desktop/: .gitattributes  .gitignore  build.gradle.kts
documentation/: .gitignore
solappduino/: version.json
stylesheets/: stylesheet.css
(+143 files in other folders)
