name:                SolArduino-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/PHPirates/SolArduino/SolArduino-core/haskell
license:             MIT
license-file:        LICENSE
author:              Thomas Schouten
maintainer:          k3l1n6i2y5k7d1e3@deltadak.slack.com
copyright:           2018 Thomas Schouten
category:            Web
build-type:          Simple
extra-source-files:  readme.rst
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                     , PowerFunctions
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable SolArduino-haskell
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SolArduino-haskell
  default-language:    Haskell2010

test-suite SolArduino-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SolArduino-haskell
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/PHPirates/SolArduino/
